# colpa

./: .travis.yml  CMakeLists.txt  README.md  package.xml
cmake/: colpaConfig.cmake.in
examples/: test_COLPA.cpp  test_LCOLPA.cpp  test_inc.cpp
include/colpa/: COLPA.hpp  LCOLPA.hpp  datastructures.hpp  event.hpp
include/colpa/datastructures/: Graph.hpp  PathClass.hpp  Queue.hpp  State.hpp  Types.hpp
include/colpa/event/: ConstantDepthEvent.hpp  Event.hpp  ShortestPathEvent.hpp
include/colpa/io/: RoadmapManager.hpp
include/colpa/sampler/: DeterministicSequence.hpp  HaltonSequence.hpp
launch/: testCOLPA.launch  testInc.launch  testLCOLPA.launch
src/: COLPA.cpp  LCOLPA.cpp
src/datastructures/: Graph.cpp  Queue.cpp  State.cpp
src/event/: ConstantDepthEvent.cpp  Event.cpp  ShortestPathEvent.cpp
src/sampler/: HaltonSequence.cpp
