<?xml version="1.0"?>
<package format="2">
    <name>colpa</name>
    <version>0.0.0</version>
    <description>Class-Ordered LPA* (COLPA)</description>
    <author email="jaeinlim126@gatech.edu">Jaein Lim</author>
    <maintainer email="jaeinlim126@gatech.edu"></maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>ompl</depend>
    <depend>boost</depend>
    <depend>eigen</depend>

    <!-- This is required by REP-136. -->
    <exec_depend>catkin</exec_depend>
    <buildtool_depend>cmake</buildtool_depend>
    <buildtool_depend>clang-format-3.8</buildtool_depend>
    <buildtool_depend>lcov</buildtool_depend>
    <export>
        <build_type>cmake</build_type>
    </export>
</package>
